# haerospike

./: .gitignore  LICENSE  README.md  flake.nix  haerospike.cabal  package.yaml
example/: Main.hs
src/Database/: Aerospike.hs
src/Database/Aerospike/: Internal.hs  Key.hs  Operations.hs  Operator.hs  Record.hs  TypesBridge.hs  Value.hs
src/Database/Aerospike/Internal/: Raw.chs
src/Database/Aerospike/Policy/: CBridge.hs  Policy.hs
test/: Helpers.hs  Spec.hs
