cabal-version:      3.8
name:               haerospike
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/testy#readme>

homepage:           https://github.com/Diamondy4/haerospike#readme
bug-reports:        https://github.com/Diamondy4/haerospike/issues
author:             Diamondy4
maintainer:         Diamondy4@hotmail.com
copyright:          2022 Diamondy4
license:            MIT
license-file:       LICENSE
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/Diamondy4/haerospike

common warnings
  ghc-options:
    -Wall -Wno-unticked-promoted-constructors -Wmissing-methods
    -Wunused-packages -Werror=missing-methods
    -Werror=incomplete-patterns

common c-deps
  extra-libraries:
    aerospike
    m
    z
    pthread
    crypto
    ssl

common extensions
  default-language:   GHC2021
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase

library
  import:             warnings, c-deps, extensions

  -- cabal-fmt: expand src
  exposed-modules:
    Database.Aerospike
    Database.Aerospike.Internal
    Database.Aerospike.Internal.Raw
    Database.Aerospike.Key
    Database.Aerospike.Operations
    Database.Aerospike.TypesBridge
    Database.Aerospike.Value

  other-modules:      Paths_haerospike
  hs-source-dirs:     src
  build-tool-depends: c2hs:c2hs
  build-depends:
    , base              >=4.7 && <5
    , bytestring
    , containers
    , inline-c
    , template-haskell
    , text
    , vector

  default-language:   Haskell2010

executable aerospike-example-exe
  import:         warnings, c-deps, extensions
  main-is:        Main.hs
  other-modules:  Paths_haerospike
  hs-source-dirs: example
  ghc-options:    -dynamic -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base              >=4.7 && <5
    , bytestring
    , containers
    , haerospike
    , inline-c
    , template-haskell
    , text

test-suite aerospike-test
  import:         warnings, c-deps, extensions
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:  Paths_haerospike
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base              >=4.7 && <5
    , bytestring
    , containers
    , haerospike
    , inline-c
    , template-haskell
    , text
